--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-screens": "~3.29.0",
     "react-navigation": "^4.4.4",
     "tcomb-form-native": "^0.6.20",
-    "three": "^0.146.0"
+    "three": "^0.146.0",
+    "expo-gl": "~13.6.0"
   }
 }
