Working box, and items props passing

--- a/app.json
+++ b/app.json
@@ -8,7 +8,6 @@
       "ios",
       "android"
     ],
-
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -24,7 +23,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.magicpackagingapp"
+    },
+    "android": {
+      "package": "com.anonymous.magicpackagingapp"
     }
   }
 }
