--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/slider": "^4.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "^50.0.13",
