--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.1",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.13",
     "expo-gl": "~13.6.0",
     "expo-three": "^7.0.0",
