--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/slider": "^4.5.2",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.1",
     "deprecated-react-native-prop-types": "^5.0.0",
@@ -33,6 +34,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dropdownalert": "^3.10.0",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-elements": "^1.1.0",
     "react-native-flash-message": "^0.1.12",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
