--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
   "dependencies": {
     "@craftzdog/react-native-buffer": "^6.0.5",
     "@expo/samples": "2.1.1",
-    "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/slider": "^4.5.2",
-    "@react-native-picker/picker": "^2.7.5",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "4.5.2",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.1",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^51.0.32",
-    "expo-gl": "^14.0.2",
+    "expo-asset-utils": "^3.0.0",
+    "expo-gl": "~14.0.2",
     "expo-three": "^8.0.0",
     "firebase": "9.6.11",
     "impagination": "^1.0.0-alpha.3",
@@ -32,7 +33,7 @@
     "node": "^21.7.1",
     "node.js": "^0.0.1-security",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.5",
     "react-native-dropdownalert": "^3.10.0",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-elements": "^1.1.0",
@@ -42,13 +43,13 @@
     "react-native-modal": "^9.0.0",
     "react-native-pagination": "^1.5.5",
     "react-native-paper": "^4.12.8",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.29.0",
+    "react-native-screens": "3.31.1",
     "react-navigation": "^4.4.4",
     "tcomb-form-native": "^0.6.20",
     "three": "^0.168.0",
-    "typescript": "^5.3.0"
+    "typescript": "~5.3.3"
   },
   "version": "1.0.0"
 }
