--- a/package.json
+++ b/package.json
@@ -15,37 +15,39 @@
   "dependencies": {
     "@craftzdog/react-native-buffer": "^6.0.5",
     "@expo/samples": "2.1.1",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "4.5.2",
     "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/native": "^6.1.1",
+    "@react-native/metro-config": "^0.75.3",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.1",
-    "deprecated-react-native-prop-types": "^5.0.0",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "^51.0.32",
     "expo-asset-utils": "^3.0.0",
     "expo-gl": "~14.0.2",
+    "expo-splash-screen": "^0.27.5",
     "expo-three": "^8.0.0",
     "firebase": "9.6.11",
-    "impagination": "^1.0.0-alpha.3",
-    "moment": "^2.24.0",
     "native-base": "^2.11.0",
-    "node": "^21.7.1",
-    "node.js": "^0.0.1-security",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-dropdownalert": "^3.10.0",
+    "react-native-dropdownalert": "^5.1.0",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-elements": "^1.1.0",
     "react-native-flash-message": "^0.1.12",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-material-dropdown-v2": "^0.11.1",
     "react-native-modal": "^9.0.0",
-    "react-native-pagination": "^1.5.5",
+    "react-native-pagination": "^1.0.4",
     "react-native-paper": "^4.12.8",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-reanimated": "^3.10.1",
+    "react-native-safe-area-context": "^4.11.0",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "^3.34.0",
     "react-navigation": "^4.4.4",
     "tcomb-form-native": "^0.6.20",
     "three": "^0.168.0",
