--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "native-base": "^2.11.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-app-link": "^1.0.1",
     "react-native-dropdownalert": "^5.1.0",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-elements": "^1.1.0",
