--- a/app.json
+++ b/app.json
@@ -2,6 +2,32 @@
   "expo": {
     "name": "magicboxer",
     "slug": "magicboxer",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "privacy": "public",
+    "platforms": [
+      "ios",
+      "android"
+    ],
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "enabled": true,
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.magicboxerapp"
+    },
+    "android": {
+      "package": "com.anonymous.magicboxerapp"
+    }
   }
 }
