--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "magicboxer",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,10 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
+    "@craftzdog/react-native-buffer": "^6.0.5",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli": "^14.1.1",
+    "@react-native-community/slider": "4.5.2",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "expo": "^51.0.34",
+    "expo-gl": "^14.0.2",
+    "expo-modules-core": "^1.12.24",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
+    "expo-three": "^8.0.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "^0.75.3",
+    "react-native-app-link": "^1.0.1",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-element-dropdown": "^2.12.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-quick-base64": "^2.1.2",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-uuid": "^2.0.2",
+    "three": "^0.169.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
