--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 
 {
   "expo": {
+    "newArchEnabled": true,
     "name": "MagicBoxer",
     "displayName": "MagicBoxer",
     "description": "A very interesting project.",
@@ -11,7 +12,7 @@
       "android"
     ],
     "version": "1.0.0",
-    "sdkVersion": "51.0.0",
+    "sdkVersion": "52.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
