--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~52.0.19",
+    "expo": "^52.0.20",
     "expo-asset-utils": "^3.0.0",
     "expo-gl": "~15.0.2",
     "expo-splash-screen": "~0.29.18",
