Added placeholder text to items container

--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "expo": "^52.0.20",
     "expo-asset-utils": "^3.0.0",
     "expo-gl": "~15.0.2",
-    "expo-splash-screen": "~0.29.18",
+    "expo-splash-screen": "^0.29.18",
     "expo-three": "^8.0.0",
+    "expo-updates": "~0.26.10",
     "firebase": "9.6.11",
     "native-base": "^3.4.28",
     "react": "18.3.1",
