--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "newArchEnabled": true,
     "name": "MagicBoxer",
     "displayName": "MagicBoxer",
-    "description": "A very interesting project.",
+    "description": "Smart Packaging App.",
     "slug": "magic-packaging-app",
     "privacy": "public",
     "platforms": [
@@ -16,7 +16,7 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/splash-screen.png",
       "resizeMode": "contain",
       "backgroundColor": "#0f2d44"
     },
