--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "my-new-project",
-  "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "eject": "expo eject",
@@ -28,7 +27,7 @@
     "expo": "^52.0.20",
     "expo-asset-utils": "^3.0.0",
     "expo-gl": "~15.0.2",
-    "expo-splash-screen": "^0.29.18",
+    "expo-splash-screen": "~0.29.18",
     "expo-three": "^8.0.0",
     "expo-updates": "~0.26.10",
     "firebase": "9.6.11",
@@ -49,15 +48,17 @@
     "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
     "react-navigation": "^4.4.4",
     "tcomb-form-native": "^0.6.20",
     "three": "^0.168.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-status-bar": "~2.0.0"
   },
   "version": "1.0.0",
   "devDependencies": {
-    "@react-native-community/cli": "^15.1.3"
+    "@react-native-community/cli": "^15.1.3",
+    "@babel/core": "^7.20.0"
   }
 }
