--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-asset-utils": "^3.0.0",
     "expo-gl": "~15.0.2",
     "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
     "expo-three": "^8.0.0",
     "expo-updates": "~0.26.10",
     "firebase": "9.6.11",
@@ -53,12 +54,11 @@
     "react-navigation": "^4.4.4",
     "tcomb-form-native": "^0.6.20",
     "three": "^0.168.0",
-    "typescript": "~5.3.3",
-    "expo-status-bar": "~2.0.0"
+    "typescript": "~5.3.3"
   },
   "version": "1.0.0",
   "devDependencies": {
-    "@react-native-community/cli": "^15.1.3",
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^15.1.3"
   }
 }
