--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo": "^52.0.20",
     "expo-asset-utils": "^3.0.0",
     "expo-gl": "~15.0.2",
+    "expo-mail-composer": "~14.0.1",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-three": "^8.0.0",
