--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-app-link": "^1.0.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdownalert": "^5.1.0",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-elements": "^3.4.3",
