--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "^52.0.20",
     "expo-asset-utils": "^3.0.0",
+    "expo-crypto": "^14.0.1",
     "expo-gl": "~15.0.2",
     "expo-mail-composer": "~14.0.1",
     "expo-splash-screen": "~0.29.18",
