--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.9",
     "expo": "^52.0.20",
     "expo-asset-utils": "^3.0.0",
     "expo-crypto": "^14.0.1",
