--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
     "@react-three/fiber": "^8.17.12",
     "axios": "^1.7.9",
     "expo": "~52.0.25",
-    "expo-blur": "~14.0.2",
+    "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.4",
     "expo-crypto": "^14.0.2",
     "expo-font": "~13.0.3",
-    "expo-gl": "^15.0.3",
+    "expo-gl": "~15.0.4",
     "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.4",
+    "expo-linking": "~7.0.5",
     "expo-mail-composer": "^14.0.2",
-    "expo-router": "~4.0.16",
-    "expo-splash-screen": "^0.29.20",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.1",
+    "expo-symbols": "^0.2.2",
     "expo-system-ui": "~4.0.7",
     "expo-three": "^8.0.0",
-    "expo-updates": "^0.26.12",
+    "expo-updates": "^0.26.15",
     "expo-web-browser": "~14.0.2",
     "native-base": "^3.4.28",
     "react": "18.3.1",
