--- a/package.json
+++ b/package.json
@@ -23,37 +23,38 @@
     "@react-three/drei": "^9.121.1",
     "@react-three/fiber": "^8.17.12",
     "axios": "^1.7.9",
-    "expo": "~52.0.25",
+    "expo": "~52.0.41",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.4",
+    "expo-constants": "~17.0.8",
     "expo-crypto": "^14.0.2",
-    "expo-font": "~13.0.3",
+    "expo-font": "~13.0.4",
     "expo-gl": "~15.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-mail-composer": "^14.0.2",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "^0.29.21",
+    "expo-router": "~4.0.19",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "^0.2.2",
-    "expo-system-ui": "~4.0.7",
+    "expo-system-ui": "~4.0.8",
     "expo-three": "^8.0.0",
-    "expo-updates": "^0.26.15",
+    "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
     "native-base": "^3.4.28",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-app-link": "^1.0.1",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "jest-expo": "~52.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
