Lookup Item Dims using OpenAI API

--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,5 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
-# @end expo-cli
+# @end expo-cli// Add API config file to gitignore
+src/config/apiConfig.js
