--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@craftzdog/react-native-buffer": "^6.0.5",
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.5",
@@ -24,37 +24,37 @@
     "@react-three/drei": "^9.121.1",
     "@react-three/fiber": "^8.17.12",
     "axios": "^1.7.9",
-    "expo": "~52.0.41",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.8",
-    "expo-crypto": "^14.0.2",
-    "expo-font": "~13.0.4",
-    "expo-gl": "~15.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-mail-composer": "^14.0.2",
-    "expo-router": "~4.0.19",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "^0.2.2",
-    "expo-system-ui": "~4.0.8",
+    "expo": "^53.0.9",
+    "expo-blur": "~14.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-crypto": "~14.1.4",
+    "expo-font": "~13.3.1",
+    "expo-gl": "~15.1.5",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-mail-composer": "~14.1.4",
+    "expo-router": "~5.0.7",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
     "expo-three": "^8.0.0",
-    "expo-updates": "~0.27.4",
-    "expo-web-browser": "~14.0.2",
-    "jest-expo": "~52.0.6",
+    "expo-updates": "~0.28.13",
+    "expo-web-browser": "~14.1.6",
+    "jest-expo": "~53.0.5",
     "native-base": "^3.4.28",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-app-link": "^1.0.1",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "three": "^0.172.0"
   },
   "devDependencies": {
@@ -64,12 +64,11 @@
     "@babel/plugin-transform-runtime": "^7.23.7",
     "@babel/plugin-transform-template-literals": "^7.23.3",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
