--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@craftzdog/react-native-buffer": "^6.0.5",
+    "base-64": "^1.0.0",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/slider": "^4.5.5",
+    "@react-native-community/slider": "4.5.6",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
@@ -24,7 +24,7 @@
     "@react-three/drei": "^9.121.1",
     "@react-three/fiber": "^8.17.12",
     "axios": "^1.7.9",
-    "expo": "53.0.15",
+    "expo": "53.0.16",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-crypto": "~14.1.5",
@@ -37,7 +37,7 @@
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.9",
+    "expo-system-ui": "~5.0.10",
     "expo-three": "^8.0.0",
     "expo-updates": "~0.28.15",
     "expo-web-browser": "~14.2.0",
@@ -45,7 +45,7 @@
     "native-base": "^3.4.28",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-app-link": "^1.0.1",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
