--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "base-64": "^1.0.0",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
@@ -24,6 +23,9 @@
     "@react-three/drei": "^9.121.1",
     "@react-three/fiber": "^8.17.12",
     "axios": "^1.7.9",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "base-64": "^1.0.0",
+    "buffer": "^6.0.3",
     "expo": "53.0.16",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
