--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "magicboxer",
   "version": "1.0.0",
   "type": "module",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.1.1",
     "@react-three/drei": "^9.121.1",
     "@react-three/fiber": "^8.17.12",
@@ -26,24 +27,26 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
-    "expo": "53.0.16",
+    "expo": "^53.0.17",
     "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.6",
+    "expo-constants": "^17.1.7",
     "expo-crypto": "~14.1.5",
+    "expo-file-system": "^18.1.11",
     "expo-font": "~13.3.2",
     "expo-gl": "~15.1.7",
     "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.6",
+    "expo-linking": "^7.1.7",
     "expo-mail-composer": "~14.1.5",
-    "expo-router": "~5.1.2",
-    "expo-splash-screen": "~0.30.9",
+    "expo-router": "^5.1.3",
+    "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-three": "^8.0.0",
-    "expo-updates": "~0.28.15",
+    "expo-updates": "^0.28.16",
     "expo-web-browser": "~14.2.0",
-    "jest-expo": "~53.0.8",
+    "jest-expo": "^53.0.9",
+    "memoize-one": "^6.0.0",
     "native-base": "^3.4.28",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -54,6 +57,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
