--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
+    "csv-parse": "^5.6.0",
     "expo": "^53.0.17",
     "expo-blur": "~14.1.5",
     "expo-constants": "^17.1.7",
     "expo-crypto": "~14.1.5",
+    "expo-document-picker": "^13.1.6",
     "expo-file-system": "^18.1.11",
     "expo-font": "~13.3.2",
     "expo-gl": "~15.1.7",
@@ -38,6 +40,7 @@
     "expo-linking": "^7.1.7",
     "expo-mail-composer": "~14.1.5",
     "expo-router": "^5.1.3",
+    "expo-sharing": "^13.1.5",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
