--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
     "csv-parse": "^5.6.0",
-    "expo": "^53.0.17",
+    "expo": "53.0.19",
     "expo-blur": "~14.1.5",
     "expo-constants": "^17.1.7",
     "expo-crypto": "~14.1.5",
@@ -46,7 +46,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-three": "^8.0.0",
-    "expo-updates": "^0.28.16",
+    "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "jest-expo": "^53.0.9",
     "memoize-one": "^6.0.0",
