--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-font": "~13.3.2",
     "expo-gl": "~15.1.7",
     "expo-haptics": "~14.1.4",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "^7.1.7",
     "expo-mail-composer": "~14.1.5",
     "expo-router": "^5.1.3",
