--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
     "csv-parse": "^5.6.0",
-    "expo": "53.0.19",
+    "expo": "^53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "^17.1.7",
     "expo-crypto": "~14.1.5",
@@ -40,7 +40,7 @@
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "^7.1.7",
     "expo-mail-composer": "~14.1.5",
-    "expo-router": "^5.1.3",
+    "expo-router": "^5.1.4",
     "expo-sharing": "^13.1.5",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
